Sitio completo con SEO

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
   <!-- SEO -->
   <title> MallPress - Prensa & Comunicacion </title>
-  <meta name="description" content="Somos tu Agencia! Con una estrategia creativa adaptada a tus necesidades y presupuesto, logramos los resultados esperados.">
-  <meta name="keywords" content="agencia de publicidad, redes sociales, agencia de prensa, diseño de sitios webs">
+  <meta name="description" content="Somos tu Agencia de prensa & comunicación! Con una estrategia creativa adaptada a tus necesidades y presupuesto, logramos los resultados esperados.">
+  <meta name="keywords" content="agencia de publicidad, redes sociales, agencia de prensa, diseño de sitios webs, posicionamiento en buscadores">
 
   </head>
   <body>
@@ -88,7 +88,7 @@
 
   <!-- FINAL CARROUSEL HEADER -->
 <div class="container-fluid py-2">
-    <h1 class="text-center wow fadeInUp"> Somos tu agencia! </h1>
+    <h1 class="text-center wow fadeInUp"> Somos tu agencia de prensa & comunicación </h1>
     <h4 class="text-center"> Trabajemos Juntos. </h4>
 </div>
 
@@ -98,7 +98,7 @@
             <div class="row">
             <article class="col-sm-12 col-md-5 col-lg-5">
               <a href="page/como.html">
-                <img src="img/bombilla2.png" alt="MallPress - Somos tu Agencia!" class="w-100">
+                <img src="img/bombilla2.png" alt="MallPress - Somos tu Agencia de prensa & comunicación" class="w-100">
               </a>
             </article>
 
@@ -218,9 +218,9 @@ Con una estrategia creativa adaptada a tus necesidades y presupuesto, logramos l
   <section>
     <h5> Seguinos en las redes!</h5>
     <center>
-        <a href="https://www.linkedin.com/"> <img src="img/Linkedin.png" class="img__redes"> </a>
+        <a href="https://www.linkedin.com/"> <img src="img/Linkedin.png" class="img__redes" alt="Logo Linkedin"> </a>
 
-        <a href="https://www.instagram.com/"> <img src="img/Instagram.png" class="img__redes"> </a>
+        <a href="https://www.instagram.com/"> <img src="img/Instagram.png" class="img__redes" alt="Logo Instagram"> </a>
     </center>
 
 </section> 
@@ -233,7 +233,7 @@ Con una estrategia creativa adaptada a tus necesidades y presupuesto, logramos l
 
 <section> 
     <h5> Escríbinos por WhatsApp </h5>
-    <center><a href="https://walink.co/9257f2"> <img src="img/WhatsaApp.png" class="img__redes"> </a></center>
+    <center><a href="https://walink.co/9257f2"> <img src="img/WhatsaApp.png" class="img__redes" alt="Logo WhatsApp"> </a></center>
  
 </section>
 
